 2012-05-29 20:25  mkubecek 
   M src/isql/isql.epp
isql: fix output if charset is different from locale

 2012-05-26 21:51  hvlad 
   M src/jrd/dpm.epp
Fixed bug CORE-3855 : Blobs, inserted into GLOBAL TEMPORARY TABLE ON COMMIT DELETE ROWS, could be placed into newly allocated pages even if there is enough free place on some existing data page

 2012-05-26 21:35  hvlad 
   M src/utilities/ntrace/TracePluginImpl.cpp
Misc

 2012-05-24 09:07  alexpeshkoff 
   M src/alice/tdr.cpp
Postfix for CORE-3612 - send errors to stderr

 2012-05-23 09:37  mkubecek 
   M src/isql/isql.epp
Fix broken isql history with libedit 3.0

 2012-05-22 16:55  mkubecek 
   M builds/install/arch-specific/linux/misc/makeInstallImage.sh.in
Add interpreter specification to generated scripts.

 2012-05-17 09:10  dimitr 
   M src/jrd/par.cpp
One more correction. This restores the accidentally changed original logic.

 2012-05-17 08:55  dimitr 
   M src/jrd/par.cpp
Correction.

 2012-05-17 08:08  dimitr 
   M src/jrd/par.cpp
More fixes for CORE-3557.

 2012-05-14 15:18  asfernandes 
   M src/dsql/pass1.cpp
Backport fix for CORE-3611 - Wrong data while retrieving from CTEs (or derived tables) with same column names.

 2012-05-12 09:18  hvlad 
   M src/jrd/trace/TraceDSQLHelpers.h
Fixed bug CORE-3845 : Interruption of 'heavy query' leads to 0 ms (zero duration) in it`s statistics in trace log

 2012-05-11 19:34  hvlad 
   M src/jrd/btr.cpp
Fixed bug CORE-3841 : Corrupted database after inserting rows.
It should also fix CORE-3839 : Values disappearing from index

 2012-05-11 19:32  hvlad 
   M src/jrd/validation.cpp
Fixed bug CORE-3844 : Validation not detects one specific case of index corruption

 2012-05-09 13:55  dimitr 
   M src/jrd/cmp.cpp
Fixed my patch for CORE-3777 to cure the unexpectedly introduced regression.

 2012-05-03 21:24  hvlad 
   M src/utilities/ntrace/TracePluginImpl.cpp
Removed accidentally committed code.

 2012-05-03 13:48  hvlad 
   M src/jrd/cch.cpp
   M src/jrd/nbak.cpp